# citibike-analytics-platform

./: .gitignore  README.md  environment.yml  pyproject.toml
app/: dashboard.py
config/: pipeline_config.yml
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: fct_station_daily.sql  fct_station_flows_daily.sql  fct_station_flows_hourly.sql  fct_station_hourly.sql  fct_trip_daily.sql  fct_trip_daily_enriched.sql  fct_trips.sql  marts.yml
dbt/models/staging/: staging.yml  stg_citibike_trips.sql  stg_weather_daily.sql  weather_staging.yml
dbt/seeds/: holiday_calendar.csv  seeds.yml
scripts/: download_citibike_data.py  download_data.py  download_weather_noaa.py
src/citibike_analytics/: config.py  date_utils.py  state.py
src/citibike_analytics/dagster_pipeline/: definitions.py
