[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citibike-analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16",
  "requests>=2.32",
  "duckdb>=1.0",
  "pyyaml>=6.0",
  "dagster>=1.7.0",
  "dagster-webserver>=1.7.0",
  "dbt-duckdb>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]